# kdevelop

./: .gitignore  CMakeLists.txt  KDevelop-RJVB.kdev4  README.md  config-kdevelop.h.cmake  kdevelop-fullversion.h.cmake  kdevelop_fullversion.h.cmake  kf5-kdevelop-5.kdev4
app/: Info.plist.in  kdevelop!  kdevelopui.rc  main.cpp
app/plasma/: CMakeLists.txt
cmake/modules/: FindMeson.cmake
kdevplatform/: CMakeLists.txt
kdevplatform/documentation/: CMakeLists.txt  documentationview.cpp  documentationview.h  standarddocumentationview.cpp  standarddocumentationview.h  standarddocumentationview_p.h  standarddocumentationview_qtb.cpp
kdevplatform/interfaces/: idocumentation.h  iprojectcontroller.h
kdevplatform/language/: CMakeLists.txt
kdevplatform/language/backgroundparser/: backgroundparser.cpp  backgroundparser.h  parseprojectjob.cpp  parseprojectjob.h
kdevplatform/language/codecompletion/: codecompletionmodel.cpp
kdevplatform/language/duchain/: duchain.cpp  duchain.h  duchainlock.cpp  duchainregister.cpp  stringhelpers.cpp  topducontext.cpp  topducontext.h  topducontextdynamicdata.cpp  topducontextdynamicdata.h  topducontextdynamicdata_p.cpp  topducontextdynamicdata_p.h
kdevplatform/language/duchain/tests/: CMakeLists.txt  lmdbxx_example.cpp  test_topcontextstore.cpp  test_topcontextstore.h  test_topcontextstore.qrc  topcontextdata.base64
kdevplatform/outputview/: outputfilteringstrategies.cpp
kdevplatform/project/: CMakeLists.txt  abstractfilemanagerplugin.cpp  filemanagerlistjob.cpp  filemanagerlistjob.h  helper.cpp  projectmodel.cpp  projectwatcher.cpp  projectwatcher.h
kdevplatform/project/tests/: abstractfilemanagerpluginimportbenchmark.cpp
kdevplatform/serialization/: itemrepository.h  itemrepositoryregistry.cpp
kdevplatform/shell/: CMakeLists.txt  core.cpp  core_p.h  documentationcontroller.cpp  documentcontroller.cpp  filteredproblemstore.cpp  openprojectdialog.cpp  openprojectdialog.h  plugincontroller.cpp  projectcontroller.cpp  textdocument.cpp  textdocument.h
kdevplatform/sublime/: CMakeLists.txt  container.cpp  idealcontroller.cpp  idealcontroller.h  idealdockwidget.cpp  idealdockwidget.h  kwidgetstyleselector.cpp  kwidgetstyleselector.h  mainwindow_p.cpp  view.cpp
kdevplatform/sublime/tests/: test_viewactivation.cpp  test_viewactivation.h
kdevplatform/util/: CMakeLists.txt  activetooltip.cpp
kdevplatform/vcs/: vcspluginhelper.cpp
kdevplatform/vcs/dvcs/: dvcsjob.cpp
kdevplatform/vcs/interfaces/: ibasicversioncontrol.h  ipatchsource.h
kdevplatform/vcs/widgets/: vcsdiffpatchsources.cpp  vcsdiffpatchsources.h
plugins/: CMakeLists.txt
plugins/astyle/: CMakeLists.txt  astyle_plugin.cpp
plugins/bazaar/: bazaarplugin.cpp
plugins/clang/: CMakeLists.txt  clangparsejob.cpp  kdevclang.xml  kdevclangsupport.json
plugins/clang/codecompletion/: context.cpp  includepathcompletioncontext.cpp
plugins/clang/duchain/: builder.cpp  clangdiagnosticevaluator.cpp  clangproblem.cpp  cursorkindtraits.h  documentfinderhelpers.cpp  parsesession.cpp  unknowndeclarationproblem.cpp
plugins/clang/tests/: CMakeLists.txt  test_assistants.cpp  test_files.cpp
plugins/clang/tests/files/: objc.m  objcpp.mm
plugins/clazy/: jobparameters.cpp
plugins/cmake/: cmakecommitchangesjob.cpp  cmakeimportjsonjob.cpp  cmakemanager.cpp  cmakemanager.h  cmakemodelitems.cpp  cmakeserverimportjob.cpp  cmakeutils.cpp  cmakeutils.h
plugins/cmake/settings/: cmakepreferences.cpp
plugins/cmakebuilder/: cmakebuilder.cpp  cmakejob.cpp
plugins/contextbrowser/: contextbrowser.cpp
plugins/customscript/: customscript_plugin.cpp
plugins/cvs/: cvsplugin.cpp  cvsplugin.h
plugins/debuggercommon/: CMakeLists.txt
plugins/filemanager/: filemanager.cpp
plugins/git/: gitmessagehighlighter.cpp  gitplugin.cpp
plugins/grepview/: grepfindthread.cpp
plugins/manpage/: manpageplugin.cpp
plugins/patchreview/: patchreview.cpp  patchreview.h  patchreview.ui  patchreviewtoolview.cpp  patchreviewtoolview.h
plugins/perforce/: perforceplugin.cpp
plugins/problemreporter/: problemsview.cpp
plugins/projectmanagerview/: projectbuildsetwidget.cpp  projectmanagerview.cpp  projectmanagerview.ui  projectmodelitemdelegate.cpp  projecttreeview.cpp  projecttreeview.h
plugins/qmakemanager/: qmakemanager.cpp
plugins/qmljs/nodejsmodules/: buffer.py  child_process.py  common.py  console.py  crypto.py  dgram.py  dns.py  domain.py  ecmascript.py  event.py  fs.py  http.py  https.py  idltojs.py  jsgenerator.py  net.py  os.py  path.py  punycode.py  querystring.py  readline.py  stream.py  string_decoder.py  tls.py  tty.py  url.py  util.py  vm.py  zlib.py
plugins/qthelp/: CMakeLists.txt  qthelp_config_shared.cpp  qthelp_config_shared.h  qthelpconfig.cpp  qthelpconfig.ui  qthelpdocumentation.cpp  qthelpdocumentation.h  qthelpexternalassistant.cpp  qthelpexternalassistant.h  qthelpexternalassistant_mac.mm  qthelpplugin.cpp  qthelpplugin.h  qthelpqtdoc.cpp
plugins/qthelp/tests/: CMakeLists.txt  test_qthelpplugin.cpp
plugins/quickopen/: quickopenplugin.cpp  quickopenplugin.h
plugins/subversion/: CMakeLists.txt  kdevsvnplugin.cpp
